nodejs-mongodb/deployments/mongodbapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: mongodbapp
  name: mongodbapp
spec:
  type: NodePort
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    io.kompose.service: mongodbapp
status:
  loadBalancer: {}
