nodejs-mongodb/deployments/nodejs-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: nodejs-app
  name: nodejs-app
spec:
  type: LoadBalancer
  ports:
    - name: "8000"
      port: 8000
      targetPort: 80
      nodePort: 30012
  selector:
    io.kompose.service: nodejs-app
status:
  loadBalancer: {}
