nodejs-mongodb/deployments/nodejs-mongodb-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: nodejs-mongodb-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/nodejs-mongodb-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/nodejs-mongodb-default: "true"
